static/css/header.css
.header {
    background-color: #294C2A;
    border: 5px solid #192F1A;
    box-sizing: border-box;
    width: 80%;
    height: 90px;
    margin: 0 auto;
    display: flex;
    border-radius: 30px;
    margin-top: 15px;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
}

.left-header {
    flex-direction: row;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: 'League Spartan', sans-serif;
    font-size: clamp(20px, 4vw, 48px);
    padding-right: 13%;
    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5); 
    -webkit-text-stroke: 1px #000000;
    color: #E3E3E3;
    max-width: 100%;
    white-space: nowrap; 
    overflow: hidden;
    text-overflow: ellipsis;
}

.header-text {
    font-family: 'League Spartan', sans-serif;
    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.5); 
    -webkit-text-stroke: 1px #000000;
    color: #E3E3E3;
    font-size: 24px;
    text-decoration: none;
}

.harp {
    display: flex;
    height: 85px;
    margin-right: -20px;
}

.socials {
    flex-direction: row;
    display: flex;
}

.socials img {
    height: 50px;
}

.socials > * {
    padding-right: 10px;
}

/* Media Queries for Responsiveness based on width */
@media (max-width: 1600px) {

    .header-text {
        font-size: 20px;
    }

    .harp {
        height: 70px;
    }

    .socials img {
        height: 40px;
    }
}

@media (max-width: 1250px) {
    .header {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: auto;
    }

    .left-header {
        margin-left: 20px;
    }

    .header-text {
        margin: 5px 0;
        margin-left: -15px;
    }

    .socials {
        margin-top: 10px;
    }
}

@media (max-width: 480px) {

    .header {
        display: flex; 
        flex-direction: column;
        align-items: center; 
        justify-content: center;
        height: auto;
        text-align: center; 
    }

    .left-header {
        width: 100%; 
        text-align: center; 
    }

    .header-text {
        font-size: 16px;
        width: 100%; 
        text-align: center; 
    }

    .harp {
        height: 30px;
        padding-right: 15px;
    }

}

